[gd_scene load_steps=5 format=3 uid="uid://boilbg0t37mhd"]

[ext_resource type="Script" path="res://Scene/door/door.gd" id="1_6yer4"]
[ext_resource type="Texture2D" uid="uid://bvngbqdav74v8" path="res://Assets/door/greatterthan.png" id="7_gq0tn"]
[ext_resource type="LabelSettings" uid="uid://cfdg0di8ool2i" path="res://Scene/Ui/policeLabel.tres" id="8_mkxin"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1xsik"]
bg_color = Color(0.0705882, 0.0705882, 0.0705882, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
anti_aliasing = false

[node name="Door" type="Node2D"]
position = Vector2(164, -32)
scale = Vector2(1.6, 1.6)
script = ExtResource("1_6yer4")

[node name="NextAttacks" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="NextAttacks"]
layout_mode = 0
offset_left = -103.0
offset_top = 21.0
offset_right = 97.0
offset_bottom = 120.0

[node name="IndicatorLabel" type="Label" parent="NextAttacks"]
layout_mode = 2
offset_left = -100.0
offset_top = 25.0
offset_right = 550.0
offset_bottom = 188.0
scale = Vector2(0.3, 0.3)
text = "Next apocalypse 
attacks (day 7):"
label_settings = ExtResource("8_mkxin")
horizontal_alignment = 1

[node name="MainIconRect" type="Control" parent="NextAttacks"]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 0
offset_left = 25.0
offset_top = 72.5
offset_right = 72.0
offset_bottom = 117.5

[node name="Panel" type="Panel" parent="NextAttacks/MainIconRect"]
visible = false
layout_mode = 2
offset_right = 47.0
offset_bottom = 45.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1xsik")

[node name="TextureRect" type="TextureRect" parent="NextAttacks/MainIconRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 7.49999
offset_top = 2.0
offset_right = 7.49999
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.7, 0.7)
size_flags_horizontal = 4

[node name="SecondaryIconRect" type="Control" parent="NextAttacks"]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 0
offset_left = -28.0
offset_top = 80.0
offset_right = 4.0
offset_bottom = 112.0

[node name="TextureRect" type="TextureRect" parent="NextAttacks/SecondaryIconRect"]
layout_mode = 2
offset_left = -4.50001
offset_top = 2.5
offset_right = 27.5
offset_bottom = 34.5
expand_mode = 3

[node name="Panel" type="Panel" parent="NextAttacks/SecondaryIconRect"]
visible = false
layout_mode = 2
offset_left = -7.00001
offset_right = 30.0
offset_bottom = 37.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1xsik")

[node name="SubIconRect2" type="Control" parent="NextAttacks"]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 0
offset_left = -82.5
offset_top = 80.0
offset_right = -66.5
offset_bottom = 96.0

[node name="TextureRect" type="TextureRect" parent="NextAttacks/SubIconRect2"]
layout_mode = 2
offset_right = 16.0
offset_bottom = 16.0
expand_mode = 3

[node name="Panel" type="Panel" parent="NextAttacks/SubIconRect2"]
visible = false
layout_mode = 2
offset_left = -2.5
offset_top = -2.5
offset_right = 20.5
offset_bottom = 20.5
theme_override_styles/panel = SubResource("StyleBoxFlat_1xsik")

[node name="SubIconRect" type="Control" parent="NextAttacks"]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 0
offset_left = -82.49
offset_top = 100.0
offset_right = -66.49
offset_bottom = 116.0

[node name="TextureRect" type="TextureRect" parent="NextAttacks/SubIconRect"]
layout_mode = 2
offset_right = 16.0
offset_bottom = 16.0
expand_mode = 3

[node name="Panel" type="Panel" parent="NextAttacks/SubIconRect"]
visible = false
layout_mode = 0
offset_left = -2.51001
offset_top = -2.5
offset_right = 20.49
offset_bottom = 20.5
theme_override_styles/panel = SubResource("StyleBoxFlat_1xsik")

[node name="Greaterthansign" type="PanelContainer" parent="NextAttacks"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = -55.0
offset_top = 87.5
offset_right = -35.0
offset_bottom = 107.5

[node name="TextureRect" type="TextureRect" parent="NextAttacks/Greaterthansign"]
layout_mode = 2
texture = ExtResource("7_gq0tn")

[node name="Greaterthansign2" type="PanelContainer" parent="NextAttacks"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 8.0
offset_top = 88.0
offset_right = 28.0
offset_bottom = 108.0

[node name="TextureRect" type="TextureRect" parent="NextAttacks/Greaterthansign2"]
layout_mode = 2
texture = ExtResource("7_gq0tn")
